objects/Partner_Management__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Count_of_Pipeline__c</fullName>
        <label>Actual (Count of Pipeline)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual__c</fullName>
        <label>Actual (Value of Pipeline)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lookup_field__c</fullName>
        <formula>Partner_Oppty__r.Opportunity_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lookup field</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Jan 2020</fullName>
                </value>
                <value>
                    <fullName>Feb 2020</fullName>
                </value>
                <value>
                    <fullName>Mar 2020</fullName>
                </value>
                <value>
                    <fullName>Apr 2020</fullName>
                </value>
                <value>
                    <fullName>May 2020</fullName>
                </value>
                <value>
                    <fullName>Jun 2020</fullName>
                </value>
                <value>
                    <fullName>Jul 2020</fullName>
                </value>
                <value>
                    <fullName>Aug 2020</fullName>
                </value>
                <value>
                    <fullName>Sep 2020</fullName>
                </value>
                <value>
                    <fullName>Oct 2020</fullName>
                </value>
                <value>
                    <fullName>Nov 2020</fullName>
                </value>
                <value>
                    <fullName>Dec 2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Source__c</fullName>
        <label>Opportunity Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing Attributed</fullName>
                </value>
                <value>
                    <fullName>Rep Attributed</fullName>
                </value>
                <value>
                    <fullName>Partner Team Attributed</fullName>
                </value>
                <value>
                    <fullName>Partner Resell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Oppty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner + Oppty</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Partner Management</relationshipLabel>
        <relationshipName>Partner_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quota_Count__c</fullName>
        <label>Quota (Count of Pipeline)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quota__c</fullName>
        <label>Quota (Value of Pipeline)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Partner Management</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Partner Management Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>